# deepspeech-rs

./: Cargo.toml
bg/: Cargo.toml
examples/: client.rs
src/: dynamic_bindings.rs
sys/: Cargo.toml  build.rs
