[package]
name = "deepspeech-sys"
description = "Bindgen output for the DeepSpeech C++ API"
license = "MPL-2.0"
documentation = "https://docs.rs/deepspeech-sys"
repository = "https://github.com/RustAudio/deepspeech-rs"
version = "0.9.0"
authors = ["est31 <MTest31@outlook.com>"]

include = ["deepspeech/native_client/deepspeech.h", "/src/**",
	"/build.rs", "/LICENSE", "Cargo.toml"]

[build-dependencies]
pkg-config = "0.3.19"
zip = "0.5.13"
